FurnitureのfooterのTwitterの<a>タグの修正

--- a/Furniture/product2.html
+++ b/Furniture/product2.html
@@ -88,7 +88,7 @@
     <div class="footer-content">
       <ul>
         <li><a href="https://www.instagram.com/" target="_blank">INSTAGRAM</a></li>
-        <li><a href="https://twitter.com/" target="_blank"></a>TWITTER</a></li>
+        <li><a href="https://twitter.com/" target="_blank">TWITTER</a></li>
         <li><a href="https://www.facebook.com/" target="_blank">FACEBOOK</a></li>
       </ul>
     </div>
