クラス(merit)まで終了

--- a/isara/index.html
+++ b/isara/index.html
@@ -79,19 +79,121 @@
         </div>
       </div>
 
+
       <div class="about sp-wrapper text-center">
         <div class="about-sorcle">
-          ABOUT
+          <p>ABOUT</p>
         </div>
         <div class="subtitle">
           <div class="subtitle-box left-box"></div>
           <div class="subtitle-box right-box"></div>
           <h2>ノマドエンジニア育成講座<br>iSara[イサラ]とは</h2>
         </div>
-        <p>「 稼ぐこと 」にフォーカスしたWebエンジニア育成講座です。</p>
-        <div class="five-skill">
-          <p>稼げるエンジニアに必要な５つのスキルとは？</p>
+        <p class="about-text">「 稼ぐこと 」にフォーカスしたWebエンジニア育成講座です。</p>
+        <div class="five-skills">
+          <p class="about-text">稼げるエンジニアに必要な<br class="newline">５つのスキルとは？</p>
+          <div class="five-skills-img">
+            <div class="box"><img src="./img/skill.jpg" alt=""><p>基礎的な
+              <br>プログラミングスキル     
+              </p></div>
+            <div class="box"><img src="./img/sales.jpg" alt=""><p>案件獲得に必要な
+              <br>営業力</p></div>
+            <div class="dumy-box"></div>
+            <div class="box"><img src="./img/document.jpg" alt=""><p>見積もり作成から
+              <br>納品までの知識
+              </p></div>
+            <div class="box"><img src="./img/plusone.jpg" alt=""><p>自分の付加価値を
+              <br>高めるスキル</p></div>
+            <div class="dumy-box"></div>
+            <div class="box last-box"><img src="./img/connection.jpg" alt=""><p>フリーランス同士の
+              <br>横のつながり</p></div>
+          </div>
         </div>
+      </div>
+
+      <div class="step sp-wrapper text-center">
+        <div class="step-top-text">
+          <h2>iSaraで<br class="newline">「基本的なプログラミングスキル」<br class="newline">は教えません</h2>
+          <p>基礎的なプログラミングスキルは無料で学べる時代。</p>
+          <p>iSaraでは、基礎知識学習は<br class="newline"><span class="yellow-span">事前課題</span>と<span class="yellow-span">チャットサポート</span>のみ。</p>
+        </div>
+        <div class="step-conteiner">
+            <div class="step-box">
+              <p class="step-back-p">STEP.1</p>
+              <p class="step-smoll">【バンコク渡航前１ヶ月】</p>
+              <p>事前課題で基礎知識を学ぶ</p>
+            </div>
+            <div class="step-box">
+              <p class="step-back-p">STEP.2</p>
+              <p class="step-smoll">【バンコク到着後】</p>
+              <p>実践的に稼ぐことに特化した学習</p>
+            </div>
+            <div class="step-box">
+              <p class="step-back-p">STEP.3</p>
+              <p class="step-smoll">【バンコク帰国後】</p>
+              <p>講座実施後の案件獲得サポート</p>
+            </div>
+          </div>
+      </div>
+      <div class="step-footer text-center">
+        <div class="step-footer-text">
+          <p>スキルアップしてもフリーランスエンジニア<br class="newline">として食べていくことは難しい。</p>
+          <p>フリーランスには <span class="yellow-span">プログラミングスキル以外が大切</span></p>
+        </div>
+      </div>
+
+      <div class="learning text-center">
+        <h2>iSara<span class="learning-smoll">[イサラ]</span>で学べること</h2>
+        <p>iSaraの学習では、エンジニアとして<br class="newline">「稼ぐ」ために必要な能力を身につけます。</p>
+        <div class="learning-content">
+          <div class="learning-boxcover">
+            <div class="learning-box"><img src="./img/salesskill.jpg" alt=""></div>
+            <div class="learning-box"><img src="./img/knowledge.jpg" alt=""></div>
+            <div class="learning-box"><img src="./img/skillup.jpg" alt=""></div>
+            <div class="learning-box"><img src="./img/freelanceconnection.jpg" alt=""></div>
+          </div>
+        </div>
+        <p>これらを教えるのがiSaraです。</p>
+      </div>
+
+      <div class="merit sp-wrapper text-center">
+        <div class="subtitle">
+          <div class="subtitle-box left-box"></div>
+          <div class="subtitle-box right-box"></div>
+          <div class="subtitle-merit">
+            <p>他のプログラミングスクールとここが違う！</p>
+            <h2>iSara[イサラ]の３つのメリット</h2>
+          </div>
+        </div>
+        <div class="merit-boxcover">
+          <div class="merit-box">
+            <img src="./img/learnfromfreelancer.jpg" alt="">
+            <div class="merit-box-backimg mbb-1"></div>
+            <h3>現役フリーランスから学べる</h3>
+            <p>他のプログラミングスクールとは違い、実際にフリーランスとして活動しているエンジニアが直接講師を勤めます。</p>
+          </div>
+          <div class="merit-box">
+            <img src="./img/learnfromprojects.jpg" alt="">
+            <div class="merit-box-backimg mbb-2"></div>
+            <h3>実践を通じて学べる</h3>
+            <p>フリーランスにとって最短の学習方法は「実践」。iSaraでは実案件を通して学びます。現役フリーランサーの案件サポートに加え、クラウドソーシングを活用。初心者の自分じゃ無理と思うかもですが、現役フリーランスがサポートしますので大丈夫。</p>
+          </div>
+          <div class="merit-box">
+            <img src="./img/actuallyfree.jpg" alt="">
+            <div class="merit-box-backimg mbb-3"></div>
+            <h3>授業料が実質０円</h3>
+            <p>講座費用258,000円以上の金額が稼げるまで「永久サポート延長」があります。</p>
+          </div>
+        </div>
+        <div class="merit-more">
+          <h3>さらに！帰国後もサポート付き</h3>
+          <h4>リモートワーカーのチームを作ることで受注率、受注単価が大幅に向上します。</h4>
+          <p>iSaraは講座が終わって終了ではありません。
+            <br>参加メンバーのチャットグループを作り、帰国後も継続的に案件参加<br class="newline">できるようになります。
+            <br class="noline">また、チームで働くことで継続的に稼ぎやす<br class="newline">い仕組みづくりも構築しております。</p>
+        </div>
+        <p class="merit-note">事前課題ができない人はお断りしております。<br class="newline">iSaraでは、無料で学べるプログラミング基礎知識は教えません。<br class="newline">事前課題一覧はメールで送りつつ、
+          <br class="noline">チャットサポートのみ。従って、<br class="newline">本気で取り組まないと結果は出ません。</p>
       </div>
 
   </main>
