--- a/isara/index.html
+++ b/isara/index.html
@@ -10,11 +10,12 @@
   <link href="./style.css" rel="stylesheet">  
   <link
   href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap"
-  rel="stylesheet"
-/>
+  rel="stylesheet"/>
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 </head>
 <body>
+  <div class="body-body">
   <header>
     <div class="wrapper">
       <div class="header-left">
@@ -135,10 +136,10 @@
             </div>
           </div>
       </div>
-      <div class="step-footer text-center">
-        <div class="step-footer-text">
+      <div class="sec-footer text-center">
+        <div class="sec-footer-text">
           <p>スキルアップしてもフリーランスエンジニア<br class="newline">として食べていくことは難しい。</p>
-          <p>フリーランスには <span class="yellow-span">プログラミングスキル以外が大切</span></p>
+          <p>フリーランスには <span class="yellow-span">プログラミングスキル以外</span>が大切。</p>
         </div>
       </div>
 
@@ -196,6 +197,124 @@
           <br class="noline">チャットサポートのみ。従って、<br class="newline">本気で取り組まないと結果は出ません。</p>
       </div>
 
+      <div class="member text-center sp-wrapper">
+        <h3 class="member-title"><i class="far fa-id-card"></i>
+          創業メンバー</h3>
+        <p class="member-title">実際にフリーランスとして活躍している<br class="newline">エンジニアが立ち上げました</p>
+        <div class="member-boxcover">
+          <div class="member-box">
+            <img src="./img/keisuke_someya.jpg" alt="">
+            <div class="member-box-text">
+              <p class="member-job">フリーランス講師</p>
+              <p class="member-name">染谷 佳佑</p>
+              <p class="member-ex">ISARA (THAILAND) CO.,LTD.の代表です。学生起業の後にリクルートへ就職、その後独立し、海外移住しました。今はフリーランスとしてリモートワークで日本円を稼ぎ、外国通貨に変えて使い、海外を旅してます。営業、ブログPVアップ(最高月間150万PV)、ビジネス構築が専門です。</p>
+            </div>
+          </div>
+          <div class="member-box">
+            <img src="./img/yuki.png" alt="">
+            <div class="member-box-text">
+              <p class="member-job">フリーランス講師</p>
+              <p class="member-name">成田　雄輝</p>
+              <p class="member-ex">バンコクのシェアハウスのオーナーをやりながら一年の大半をタイで過ごしています。 大学時代から今に至るまでネットだけで生計を立てているので、自由歴だけは講師陣の中で最長です！ 母親がタイ人という事もありタイには精通してますので、こちらでの生活のサポートはお任せください！</p>
+            </div>
+          </div>
+          <div class="member-box">
+            <img src="./img/manabu.png" alt="">
+            <div class="member-box-text">
+              <p class="member-job">フリーランスエンジニア</p>
+              <p class="member-name">坂内　学</p>
+              <p class="member-ex">アドバイザーとして参画しました。新卒で海外就職して１１ヶ月後に退職。今は日本にいたり海外にいたりでゆるくフリーランスをしています。</p>
+              <p class="member-ex">お仕事はWebマーケティングとプログラミングが専門領域です。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="question sp-wrapper text-center">
+        <div class="q-and-a">
+          <div class="q-and-a-sercle">
+            <p>Q&A</p>
+          </div>
+          <div class="subtitle">
+            <div class="subtitle-box left-box"></div>
+            <div class="subtitle-box right-box"></div>
+            <h2 id="q-and-a-title">ノマドエンジニアとして自由に稼ぐことは<br>｢本当に｣可能なのか?</h2>
+          </div>
+          </div>
+          <div class="q-and-a-say"></div>
+          <div class="question-mes">
+            <div class="question-mes-title">
+              <h2>実現可能です</h2>
+              <p>その証拠に第三者の声を聞いてみました。</p>
+            </div>
+            <p class="question-mes-note">＊実際にフリーランスエンジニアを採用する企業様から、メッセージをいただきました。</p>
+            <div class="companys">
+              <div class="company-box">
+                <img src="./img/take.jpg" alt="">
+                <div class="company-box-text">
+                  <p>リモートワークという言葉がありますが、弊社では何も気にしません。エンジニアに求めるのは、快適なコミュニケーションと信頼と成果物のみ。</p>
+                  <p><u>Kredo IT Abroad . Inc 代表取締役 横田 猛夫</u></p>
+                </div>
+              </div>
+              <div class="company-box">
+                <img src="./img/minami_sato.jpg" alt="">
+                <div class="company-box-text">
+                  <p>社内でスキルのある人材を採用するのは難しい。外部パートナーとして継続的に依頼できるフリーランスには助かっています。</p>
+                  <p><u>SAPEUR . Inc 代表取締役 佐藤 陽</u></p>
+                </div>
+              </div>
+              <div class="company-box">
+                <img src="./img/asada.jpg" alt="">
+                <div class="company-box-text">
+                  <p>プログラマーが足りていないときに外部リソースとして、フリーランスに発注しています。今はどこの会社でもエンジニアが不足していますね</p>
+                  <p><u>株式会社BeautifulWorks 代表取締役 淺田 百合</u></p>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <div class="contents sp-wrapper text-center">
+        <div class="contents-title">
+          <h2>iSara[イサラ]で学べる内容</h2>
+          <p>渡航前の事前課題と渡航中に学べることの一覧です。</p>
+        </div>
+        <div class="contents-boxcover">
+          <div class="contents-box">
+            <div class="contents-box-title"><h3>渡航前の事前学習</h3></div>
+            <div class="contents-box-content">
+              <p>０から始めるプログラミング事前学習講座</p>
+              <p>参加者グループコミュニティ</p>
+              <p>チャットサポート</p>
+              <p>事前スカイプコンサル</p>
+              <p>環境構築の事前学習</p>
+              <p>jQueryの事前学習講座</p>
+              <p>Bootstrapの事前講座</p>
+              <p>PHP / Mysqlの事前学習講座</p>
+              <p>稼ぐためのHTML/CSS講座</p>
+              <p>WordPressの事前学習講座</p>
+            </div>
+          </div>
+          <div class="contents-box">
+            <div class="contents-box-title"><h3>バンコク渡航中</h3></div>
+            <div class="contents-box-content">
+              <p>フリーランス独立術講座</p>
+              <p>実際の実務案件をこなす</p>
+              <p>ノマドフリーランス体験</p>
+              <p>バンコク生活体験</p>
+              <p>クラウドソーシング活用講座</p>
+              <p>フリーランスのための営業講座</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="sec-footer text-center">
+        <div class="sec-footer-text">
+          <p>講座費用258,000円以上の金額が稼げるまで「永久サポート延長」します。</p>
+          <p>つまりリスク０で参加できます。</p>
+        </div>
+      </div>
+
   </main>
 
   <footer>
@@ -203,6 +322,7 @@
   </footer>
   <div class="start">
     <p><img src="./img/isaralogolarge.png" alt=""></p>
+</div>
 </div>
   <script src="./script.js"></script>
 </body>
