--- a/isara/index.html
+++ b/isara/index.html
@@ -315,6 +315,94 @@
         </div>
       </div>
 
+      <div class="flow sp-wrapper text-center">
+        <h2><i class="fas fa-laptop"></i>受講の流れ</h2>
+        <div class="flow-img">
+          <img src="./img/flow.jpg" class="noline">
+        </div>
+        <div class="flow-show-boxcover">
+          <div class="flow-show-box">
+            <div class="flow-show-box-left">
+              <img src="./img/skypeconsulting.png" alt="">
+              <p>Skypeで</p>
+              <p>事前コンサル</p>
+              <div class="newline arrow open-tag"></div>
+            </div>
+            <div class="flow-show-box-right">
+              <p class="weight-p">現在のスキルの状況、パソコンの環境説明、渡航での注意点を話します。</p>
+              <p class="weight-p">簡単なテストあり</p>
+              <p>iSaraでは受講料を稼げることを保障しています。従って、事前コンサル時点で簡単なテストを実施し、場合によってはお断りをしております。（テストの内容はPCの基礎知識に関するテストですので、普段からパソコンを利用する方でしたら問題ありません。テストはもちろん無料ですので、まずはお問い合わせください。）</p>
+            </div>
+          </div>
+          <div class="left-border-box noline"></div>
+          <div class="bottom-border-box noline"></div>
+          <div class="right-border-box noline"></div>
+          <div class="flow-show-box">
+            <div class="flow-show-box-left">
+              <img src="./img/preworks.png" alt="">
+              <p>事前課題の提出</p>
+              <div class="newline arrow open-tag"></div>
+            </div>
+            <div class="flow-show-box-right">
+              <p class="weight-p">出発前の１ヶ月前に事前課題を送ります。</p>
+              <p>０から始めるプログラミング事前学習講座、環境構築の事前学習、jQueryの事前学習講座、Bootstrapの事前学習講座、PHP / Mysqlの事前講座</p>
+              <p class="weight-p">課題は多いですが、ここで努力が必須です。プログラミングは高付加価値なスキルです。そのためには学習が必須です。回数無制限のチャットサポート付きですので、最初は努力してください。
+                また、参加者グループコミュニティも作成するので、横の繋がりでモチベーションを高めることもできます。</p>
+            </div>
+          </div>
+          <div class="right-border-box noline"></div>
+          <div class="bottom-border-box noline"></div>
+          <div class="left-border-box noline"></div>
+          <div class="flow-show-box">
+            <div class="flow-show-box-left">
+              <img src="./img/flight.png" alt="">
+              <p>現地に渡航</p>
+              <div class="newline open-tag"></div>
+            </div>
+            <div class="flow-show-box-right">
+              <p class="weight-p">到着日には空港でお出迎えし、初日のオリエンテーションを行います。
+                <br>滞在先は空港からすぐの出来たてシェアハウス。美味しいタイ料理などもご紹介します。
+                </p>
+              <p class="weight-p">iSaraは『ノマド』フリーランス養成講座です。
+                <br>楽しいノマド体験ができるよう、バンコクでの生活はこちらでサポートします。</p>
+            </div>
+          </div>
+          <div class="left-border-box noline"></div>
+          <div class="bottom-border-box noline"></div>
+          <div class="right-border-box noline"></div>
+          <div class="flow-show-box">
+            <div class="flow-show-box-left">
+              <img src="./img/personwithlight.png" alt="">
+              <p>実案件を</p>
+              <p>通して学ぶ</p>
+              <div class="newline arrow open-tag"></div>
+            </div>
+            <div class="flow-show-box-right">
+              <p class="weight-p">現役フリーランスが抱える案件に加え、クラウドソーシングを使って実案件をこなします。</p>
+              <p class="weight-p">案件獲得のためのメールの書き方や見積りの仕方など、
+                <br>他のプログラミングスクールでは教えてくれない実務スキルを学ぶことができます。</p>
+              <p>＊現役フリーランスがサポートします。</p>
+            </div>
+          </div>
+          <div class="right-border-box noline"></div>
+          <div class="bottom-border-box noline"></div>
+          <div class="left-border-box noline"></div>
+          <div class="flow-show-box">
+            <div class="flow-show-box-left">
+              <img src="./img/jobsupport.png" alt="">
+              <p>帰国後の仕事獲得</p>
+              <p>サポート付き</p>
+              <div class="newline arrow open-tag"></div>
+            </div>
+            <div class="flow-show-box-right">
+              <p class="weight-p">経験年数の少ないフリーランスが高単価で継続的に仕事受注するコツ、それがチームを組むことです。</p>
+              <p class="weight-p">iSaraではフリーランスコミュニティを形成し、帰国後のエンジニアでも継続的に稼げる仕組みを提供します。</p>
+              <p class="weight-p">もちろん、個人で十分に稼げるようになった場合はいつでも脱退できますし、制限などは何もありません。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
   </main>
 
   <footer>
