--- a/isara/index.html
+++ b/isara/index.html
@@ -15,7 +15,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 </head>
 <body>
-  <div class="body-body">
+  <div id="body-body">
   <header>
     <div class="wrapper">
       <div class="header-left">
@@ -527,14 +527,165 @@
         </div>
       </div>
 
+      <div class="last-question sp-wrapper">
+        <h2><i class="far fa-envelope-open"></i>よくある質問</h2>
+        <div class="last-ques-boxcontent">
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>プログラミスキルは必要ですか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>いいえ、必要ありません。しかし、iSaraでは参加費以上の金額が稼げることを保障しています。 従って、事前通話面談時点で簡単なテストを実施し、場合によってはお断りをしております。この点だけはご了承ください。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>参加費以上に稼げなかったらどうしますか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>参加費である258,000円以上の金額をトータルで稼ぐまで、無期限でサポート延長いたします。（講座参加後、週30時間以上の実践をすることと、週１回の実践報告をすることが延長条件です。）きちんと学び実践すれば、フリーランスでも収入を作ることは十分に可能です。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>滞在中の宿泊先はどうなりますか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>宿泊費用が必要ですが、iSara提携のホステルに宿泊することになりますので心配はありません。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>滞在中の食事はどうなりますか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>拠点となる新築シェアハウスの周辺に、50バーツ程度の（160円）安価な飲食店が多数あります。 日本食レストランもありますし、出前を取ることも可能です。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>追加でかかる費用はありますか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>拠点となる新築シェアハウスの周辺に、50バーツ程度の（160円）安価な飲食店が多数あります。 日本食レストランもありますし、出前を取ることも可能です。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>就職、転職はできますか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>DODAの調査によると、2017年のエンジニアの求人倍率は7.5倍です。これは、人材不足が叫ばれる医療業界（医師：6倍、看護師：3倍）よりも高い数値です。ですのできちんとしたスキルを身につけることができれば、就職・転職には困らないはずです。元リクルートの転職のプロも運営スタッフとして参加しています。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>フリーランスにならなければならないのですか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>いいえ、必ずフリーランスにならないといけないわけではありません。 実際に過去の卒業生の方の進路も、独立、副業として続ける、就職するなど様々です。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>ノマドワーカー的に世界を旅しながら働きたいです。可能ですか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>きちんと努力し、スキルを身に着けることができれば可能です。 iSaraは、「好きなときに働き、好きなときに遊ぶ」という人生を送れる人を増やすために開講しました。 ちなみに、講師は全員ノマドワーカーとして、働きながら自由に世界中を旅しています。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>学ぶプログラミング言語はなんですか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>HTML / CSS / PHPを学びます。どの言語も需要が高いです。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>将来的にWebサービス、アプリ、メディアをつくりたいです。</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>経験してる講師がいますよ。大丈夫です。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>次回開催の予定はありますか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>未定です。まずはお問合せください。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>海外に出るのが初めてで不安です。</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>講師陣が現地での生活をサポートしますので安心してください。ただしパスポート取得は必要です。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>タイ語、英語が一切話せません。参加可能でしょうか。</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>タイ語スタッフ、英語スタッフがいるのでOKです。日本人、タイ人スタッフがおりますので、期間中のトラブル対応の心配は必要ありません。</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>治安はどうですか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>バンコクは、東南アジアや南アジアの他の国の都市部と比べると、街中も整備されており、非常に治安の良い街です。日本ほどではないですが、世界でも非常に治安の良い国として知られています</p>
+            </div>
+          </div>
+          <div class="last-ques-boxcover">
+            <div class="last-ques-box">
+              <p>パソコンは必要ですか?</p>
+              <div class="open-tag"></div>
+          </div>
+            <div class="last-ques-box-down">
+              <p>はい。ノートPCのご用意が必要です。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
   </main>
 
-  <footer>
-
+  <footer class="text-center">
+    <p>バンコクのノマドエンジニア育成講座、iSara[イサラ]</p>
+    <p>Copyright ©︎ <a href=index.html>isara</a> All Rights Reserved.</p>
+    <div class="sns-box">
+      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button " data-text="iSara[イサラ]｜バンコクのノマドエンジニア育成講座 " data-url="https://isara.life/" data-lang="ja" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fisara.life%2F&width=150&layout=button&action=like&size=small&share=true&height=65&appId" width="150" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" class="good-button"></iframe>
+    </div>
+    <p class="footer-a">Designed by <a href="https://www.facebook.com/maya.ogi.3">
+      Maya Ogi</a> / Developed by <a href="https://www.facebook.com/kentaro.koga.7">Kentaro Koga</a></p>
   </footer>
+
+  <a href="#body-body"><div id="page-top"><div class="open-tag"></div></div></a>
+
   <div class="start">
     <p><img src="./img/isaralogolarge.png" alt=""></p>
-</div>
+  </div>
 </div>
   <script src="./script.js"></script>
 </body>
